Changes: Remove extra margins and fix button box in message box style.
RevBy: TrustMe
Details: Related to NB#219131.

--- a/base/meegotouch/libmeegotouchviews/style/mdialogstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mdialogstyle.css
@@ -9,7 +9,7 @@ MDialogStyle {
     padding-left: 0;
     padding-right: 0;
     padding-top: 0;
-    padding-bottom: 0.4mm;
+    padding-bottom: 0;
 
     vertical-align: center;
     horizontal-align: center;
